# crop-disease-detection

./: .gitattributes  .gitignore  LICENSE  README.md
backend/: Crop_Disease_Detection_Detailed_Report.docx  CustomMobileNetV2_2_best copy.pth  CustomMobileNetV2_2_best.pth  download.py  generate_report.py  main.py  mobilenet_classification_model.h5  modal_app.py  pyproject.toml  requirements.txt  unet_segmentation_model.h5
frontend/: \  package-lock.json  package.json
frontend/src/: middleware.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/dashboard/: page.js
frontend/src/app/dashboard/analysis/[id]/: page.js
frontend/src/app/login/: page.js
frontend/src/components/: HistorySidebar.js  ImageUploader.js  logoutButton.js  navbar.js
frontend/src/context/: AuthContext.js
frontend/src/lib/supabase/: client.js  middleware.js  server.js
frontend/supabase/: config.toml
frontend/supabase/.temp/: pooler-url  project-ref
frontend/supabase/functions/analyze-image/: index.ts
